# algebra-structs

./: Cargo.toml  README.md
src/: cayley.rs  group.rs  lib.rs  misc.rs  symmetric_group.rs
